# capnp-plain-rs

./: .gitmodules  Cargo.toml  README.md  renovate.json
.github/actions/build-capnp/: action.yml
.github/actions/cache-cargo/: action.yml
.github/workflows/: code-style.yml  deploy-pages.yml  integration-tests.yml  integration_tests.yml  unit-tests.yml
crates/: Cargo.toml
crates/capnp-plain/: Cargo.toml
crates/capnp-plain/src/: lib.rs  message.rs  pointer.rs  util.rs
crates/capnp-plain/src/message/: tree.rs  word.rs
crates/capnp-plain/src/message/tree/: list_node.rs  struct_node.rs
crates/capnp-plain/src/message/tree/list_node/: primitive_reader.rs  primitive_writer.rs
crates/capnp-plain/src/message/tree/struct_node/: primitive_reader.rs  primitive_writer.rs
crates/capnp-plain/src/message/word/: word_pointer.rs  word_ref.rs  word_slice.rs
crates/capnp-plain/src/pointer/: far_pointer.rs  list_pointer.rs  struct_pointer.rs
crates/capnp-plain/src/pointer/list_pointer/: primitive_reader.rs
crates/capnp-plain/src/pointer/struct_pointer/: primitive_reader.rs
crates/capnp-plain/src/util/: split_array.rs
crates/capnpc-plain/: Cargo.toml
crates/capnpc-plain/src/: compiler.rs  main.rs  schema.rs
crates/capnpc-plain/src/compiler/: context.rs
crates/capnpc-plain/src/compiler/language/: rust.rs  typescript.rs
crates/capnpc-plain/src/schema/: bootstrap.rs  build.sh  schema.capnp  schema_capnp.rs
crates/golden/: Cargo.toml
crates/golden/src/: lib.rs  main.rs  schema.rs
crates/golden/src/schema/: .gitignore  build.sh  test.capnp  test_capnp.rs
crates/golden/src/testdata/: binary  pretty.json
