[workspace]
resolver = "2"
members = [
  "packages/capnp-plain",
  "packages/capnpc-plain",
  "packages/golden",
]

[workspace.dependencies]
anyhow = "1.0.81"
convert_case = "0.6.0"
once_cell = "1.19.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.79"
quote = "1.0.35"
serde = "1.0.197"
serde_json = "1.0.114"
syn = "2.0.52"
