[workspace]
resolver = "2"
members = [
  "packages/capnp-plain",
  "packages/capnpc-plain",
  "packages/golden",
]

[workspace.dependencies]
anyhow = "1.0.82"
convert_case = "0.6.0"
once_cell = "1.19.0"
prettyplease = "0.2.19"
proc-macro2 = "1.0.81"
quote = "1.0.36"
serde = "1.0.198"
serde_json = "1.0.116"
syn = "2.0.59"
