[package]
name = "capnpc-plain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
capnp-plain = { path = "../capnp-plain" }
convert_case = "0.6.0"
once_cell = "1.18.0"
prettyplease = "0.2.12"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.28"
